<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="0dp"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image_login"
        android:scaleType="centerCrop"
        android:src="@drawable/top_crop_background"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_gradient_scrim"
        app:layout_constraintBottom_toBottomOf="@id/iv_background"
        app:layout_constraintTop_toTopOf="@id/iv_background"
        app:layout_constraintVertical_bias="1"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logo_purrytify" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Millions of Songs.\nOnly on Purritify."
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradient_overlay" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="3dp"
        android:hint="@string/email"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/poppins"
        app:boxBackgroundColor="@color/dark_gray"
        app:boxStrokeColor="@color/light_gray"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password label -->
    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email" />

    <!-- Password input with margins and styling -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="3dp"
        android:hint="@string/password"
        android:textColorHint="@color/light_gray"
        android:fontFamily="@font/poppins"
        app:boxBackgroundColor="@color/dark_gray"
        app:boxStrokeColor="@color/light_gray"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_label"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Rounder login button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/accent_green"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>